# luma

./: .dockerignore  .env.docker.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  NGROK_SETUP.md  QUICK_START.md  README.md  USAGE_GUIDE.md  add-ngrok-to-path.ps1  architecture-overview.drawio  dataflow-diagram.drawio  docker-compose.yml  implementation_plan.md  install-ngrok.ps1  interaction-diagram.drawio  meeting_assistant.py  pyproject.toml  requirements.txt  setup-ngrok.ps1  start-ngrok.ps1
Example-Files/: 2025.01.13_C_Epidemiologus.pptx  INCAvarcode.csv  streamlit-app-2025-12-14-09-33-02.webm
app/: main.py
backend/: config.py  main.py
backend/api/: __init__.py  routes.py
backend/models/: document.py  schemas.py
backend/services/: chat_service.py  document_processor.py  embedding_service.py  knowledge_graph_service.py  transcription_service.py  vector_store.py
chroma_db/: chroma.sqlite3
data/: 2025-03-04.docx  2025.02.14_A_Intelligentius.pptx  2025.12.13_F_Fixer.pptx  2025.12.14_M_Nilsson.pptx  INCAdata.csv  INCAvar.csv
front-end/: find.html  style.css
frontend/: app.py
knowledge/: implementation_plan.md  rca_vector_store.md  speech_to_text_plan.md
scripts/: check_vector_store.sh  clear_database.py  process_documents.py  setup_weaviate.py  show_embeddings.py  test_extraction.py  test_graph.py  test_production_extraction.py
static/: graph.html
webpages/: app.html  find-plain-html.html  find.html  find2.html  graph.html  index.html  onboard1.html  onboard2.html  style.css
(+3 files in other folders)
