[project]
name = "luma"
version = "0.1.0"
description = "RAG Application for Hospital Researchers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "weaviate-client>=4.9.0",
    "openai>=1.54.0",
    "tiktoken>=0.8.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["backend", "frontend"]
